syntax = "proto3";

package fetcher;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nrydanov/inbrief/gen/proto/fetcher";


message Empty {}

message FetchRequest {
  optional string request_id = 1;

  string chat_folder_link = 2;
  google.protobuf.Timestamp right_bound = 3;
  google.protobuf.Timestamp left_bound = 4;
  optional bool social = 5;
}


message Message {
  string text = 1;
  google.protobuf.Timestamp ts = 2;
  string link = 3;
}

message FetchResponse {
  repeated Message messages = 1;
}


message SubscribeChatFolderRequest {
  string chat_folder_link = 1;
}

service FetcherService {
  rpc Fetch(FetchRequest) returns (FetchResponse) {}
  rpc SubscribeChat(SubscribeChatFolderRequest) returns (Empty) {}
}
